--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,8 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
+    <!-- Place this tag in your head or just before your close body tag. -->
+    <script async defer src="https://buttons.github.io/buttons.js"></script>
   </head>
   <body>
     <div class="wrapper">
@@ -21,6 +23,11 @@
 
       {% if page.title %}
       <h1>{{ page.title }}</h1>
+      {% if page.gh_user and page.gh_repo %}
+      <a class="github-button" href="https://github.com/{{ page.gh_user }}/{{ page.gh_repo }}/subscription" data-icon="octicon-eye" data-count-href="/{{ page.gh_user }}/{{ page.gh_repo }}/watchers" data-count-api="/repos/{{ page.gh_user }}/{{ page.gh_repo }}#subscribers_count" data-count-aria-label="# watchers on GitHub" aria-label="Watch {{ page.gh_user }}/{{ page.gh_repo }} on GitHub">Watch</a>
+      <a class="github-button" href="https://github.com/{{ page.gh_user }}/{{ page.gh_repo }}" data-icon="octicon-star" data-count-href="/{{ page.gh_user }}/{{ page.gh_repo }}/stargazers" data-count-api="/repos/{{ page.gh_user }}/{{ page.gh_repo }}#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star {{ page.gh_user }}/{{ page.gh_repo }} on GitHub">Star</a>
+      <a class="github-button" href="https://github.com/{{ page.gh_user }}/{{ page.gh_repo }}/fork" data-icon="octicon-repo-forked" data-count-href="/{{ page.gh_user }}/{{ page.gh_repo }}/network" data-count-api="/repos/{{ page.gh_user }}/{{ page.gh_repo }}#forks_count" data-count-aria-label="# forks on GitHub" aria-label="Fork {{ page.gh_user }}/{{ page.gh_repo }} on GitHub">Fork</a>
+      {% endif %}
       <hr />
       {% endif %}
       {{ content }}
