--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -25,5 +25,20 @@ header a {
 }
 
 pre {
-    white-space: pre-wrap;
+    background-color: #eee !important;
+}
+
+code {
+    background-color: #eee;
+    padding: 2px;
+    border: 1px solid transparent;
+    border-radius: 2px;
+}
+
+.panel {
+    box-shadow: inset 0px 0px 5px 0px rgba(0,0,0,0.25);
+    border-radius: 5px;
+    padding: 1em;
+    margin: 1em 0;
+    width: 100%
 }
