--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1><a href="/">{{ site.title }} <small>Madison Scott-Clary</small></a></h1>
+        <h1><a href="/">{{ site.title }}<br /><small>Madison Scott-Clary</small></a></h1>
         <p>{{ site.description | markdownify }}</p>
     </header>
       <section>
